log gc details in container log dir
Change-Id: Ie0062cff1ddd16193918241c0e0a1dbd17471b3a

(cherry picked from commit cfbfe9b)